# actix-reactjs-guess

./: .gitignore  README.md
be-actix-guess/: Cargo.toml
be-actix-guess/src/: handler._rs  lib.rs  main.rs  response.rs
be-actix-guess/src/http/: mod.rs  utils.rs
be-actix-guess/src/http/handlers/v1/: auth.rs  index.rs  mod.rs  rooms.rs
be-actix-guess/src/http/middlewares/: auth_middleware.rs  auth_middleware_fn.rs  mod.rs
be-actix-guess/src/http/requests/v1/: rooms.rs
be-actix-guess/src/models/: app_state.rs  guess.rs  mod.rs  user.rs
be-actix-guess/src/services/: auth_service.rs  mod.rs
be-actix-guess/src/services/v1/: index_service.rs  mod.rs  rooms_service.rs
fe-reactjs-guess/: index.html  package.json
fe-reactjs-guess/src/: App.tsx  main.tsx  vite-env.d.ts
fe-reactjs-guess/src/components/category-single/: index.tsx
fe-reactjs-guess/src/components/footer/: index.tsx
fe-reactjs-guess/src/components/footer/components/: links-container.tsx
fe-reactjs-guess/src/components/header/: index.tsx
fe-reactjs-guess/src/components/img-fallback/: index.tsx
fe-reactjs-guess/src/context/: theme-context.tsx
fe-reactjs-guess/src/features/: types.tsx
fe-reactjs-guess/src/features/state/: authSlice.ts  store.ts
fe-reactjs-guess/src/hooks/: useApi.ts
fe-reactjs-guess/src/pages/about-us/about-us-page/: index.tsx
fe-reactjs-guess/src/pages/about-us/contact-us-page/: index.tsx
fe-reactjs-guess/src/pages/about-us/privacy-policy-page/: index.tsx
fe-reactjs-guess/src/pages/main-page/: index.tsx
fe-reactjs-guess/src/redux/: authSlice.ts
(+4 files in other folders)
