[package]
name = "be-actix-guess"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-cors = "0.6.4"
actix-web = "4.3.1"
chrono = { version = "0.4.26", features = ["serde"] }
env_logger = "0.10.0"
serde = { version = "1.0.17", features = ["derive"] }
uuid = { version = "1.4.1", features = ["v4"] }
jsonwebtoken = "8.3"
sha256 = "1.3"
rand = "0.8"
anyhow = "1.0"
thiserror = "1.0"
futures = "0.3"
